--- a/app/(kambaz)/styles.css
+++ b/app/(kambaz)/styles.css
@@ -7,6 +7,10 @@ body * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  color: var(--bs-secondary-rgb);
+}
+
 @media (min-width: 768px) {
   #wd-kambaz .wd-main-content-offset {
     padding-left: 140px !important;
